--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,91 @@
 :root{
-    --img-principal: images/nodos-4;
+    --principal: #111c35;
+    --secundario: #ffec27;
+    --blanco: #ffffff;
 }
 
-.header {
-    background-image:var(--img-principal);
-    height: 60rem; /*se le define una altura para que aparezca la imagen*/
+html{
+    Font-size: 62.5%;
+}
+
+Body{
+    Font-size: 16px;
+}
+
+.nav-bg{
+    background-color: var(--principal);
+}
+
+.nav-bg a{
+    color: var(--blanco);
+    text-decoration: none;
+}
+.navegacion-principal{
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+@media (min-width: 480px) {
+    .navegacion-principal{
+        flex-direction: row;
+    }  
+}
+.navegacion-principal a{
+    font-size: 2rem;
+    font-weight: 700;
+}
+.navegacion-principal a:hover {
+color: var(--secundario);
+}
+.contenedor {
+    max-width: 120rem;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.img-bg{
+    background-image: url(../images/333.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center; /*horizontal y vertical*/
+    /*padding-bottom: 25rem;*/
+    height: 40rem;
+}
+
+.header__texto{
+    color: var(--blanco);
+    padding-top: 0.5rem;
+}
+
+.bottom{
+    padding-top: 15rem;
+}
+
+
+.boton {
+    background-color: var(--principal);
+    display: block;
+    text-align: center;
+    color: var(--secundario);
+    text-decoration-line: none;
+    font-weight: 700; /*grosor*/
+    font-size: 2rem; /*tamañ0*/
+    padding: 1rem 2rem;
+    margin-top: 0.7rem;
+    text-transform: uppercase;
+    border-radius: .7rem;
+    /*width: 80%;*/
+    border: none;
+}
+@media (min-width: 768px) {
+    .boton {
+        width: auto; /*para que vuelva al tamaño "original"*/
+        display:inline-block;
+        /*padding: 1.2rem 2rem;*/
+    }    
+}
+
+.boton:hover{
+    background-color: var(--blanco);
+    transition: background-color 1s ease-in;
 }
