--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,18 +2,32 @@
     --principal: #111c35;
     --secundario: #ffec27;
     --blanco: #ffffff;
+
+    --primaryFont: 'Inter Tight', sans-serif;
 }
+
+h1, h2, p, a, footer{
+    font-family: var(--primaryFont);
+}
+
+
 
 html{
     Font-size: 62.5%;
 }
-
+ 
 Body{
     Font-size: 16px;
+    background-image: linear-gradient(to top, var(--principal) 0%, var(--blanco) 100%); /*DEGRADADO*/
 }
 
 .nav-bg{
     background-color: var(--principal);
+    padding-top: 1rem;
+}
+.nav-grid{
+    display: grid;
+    grid-template-columns: 15% 85%;
 }
 
 .nav-bg a{
@@ -21,10 +35,11 @@ Body{
     text-decoration: none;
 }
 .navegacion-principal{
-    text-align: right;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
+    padding-bottom: 0.5rem;
+    align-items: center;
 }
 @media (min-width: 480px) {
     .navegacion-principal{
@@ -34,6 +49,7 @@ Body{
 .navegacion-principal a{
     font-size: 2rem;
     font-weight: 700;
+    margin-left: 2rem;
 }
 .navegacion-principal a:hover {
 color: var(--secundario);
@@ -88,4 +104,180 @@ color: var(--secundario);
 .boton:hover{
     background-color: var(--blanco);
     transition: background-color 1s ease-in;
+}
+
+@media (min-width: 768px) {
+    .servicios{
+        padding-top: 3rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    
+}
+
+.servicio{
+    text-align: center;
+    color: var(--blanco);
+}
+
+footer{
+    padding-top: 3rem;
+    color: var(--blanco);
+    text-align: center;
+}
+
+img{
+    max-width: 60%;
+}
+
+/* Login part */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: var(--primaryFont);
+}
+
+/* body {
+
+} */
+
+.container-form {
+    width: 90%;
+    height: 90vh;
+    display: flex;
+    justify-content: space-around;
+    transition: all .5s ease-out;
+}
+
+.welcome-back {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.message {
+    padding: 1rem;
+}
+
+.message h2 {
+    font-size: 2.5rem;
+    padding: 1rem 0;
+}
+
+.message button {
+    padding: 1rem;
+    font-weight: 400;
+    background-color: #4a4aee;
+    border-radius: 2rem;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    margin-top: 2rem;
+    transition: all .3s ease-in;
+    color: #fff;
+}
+
+.message button:hover {
+    background-color: #6464f8;
+}
+
+.form {
+    width: 400px;
+    padding: 1rem;
+    margin: 2rem;
+    background-color: rgb(51, 51, 51, 0.602);
+    text-align: center;
+}
+
+.create-account {
+    padding: 2.7rem 0;
+    font-size: 1.9rem;
+}
+
+.icons {
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+}
+
+.border-icon {
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem;
+    border: solid thin white;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    transition: all .3s ease-in;
+}
+
+.border-icon:hover {
+    background-color: #4a4aee;
+    cursor: pointer;
+}
+
+.free-account {
+    padding: 2rem 0;
+}
+
+.form input {
+    width: 70%;
+    display: block;
+    margin: auto;
+    margin-bottom: 2rem;
+    background-color: transparent;
+    border: none;
+    border-bottom: white thin solid;
+    text-align: center;
+    outline: none;
+    padding: .2rem 0;
+    font-size: 1.5rem;
+    color: var(--blanco);
+}
+
+.form input[type="button"] {
+    width: 60%;
+    margin: auto;
+    border: solid thin white;
+    padding: .7rem;
+    border-radius: 2rem;
+    background-color: white;
+    font-weight: 600;
+    margin-top: 3rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: #222;
+}
+
+.sign-in {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.sign-in.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.sign-up.active {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.login-conteiner {
+/*     position: relative;
+ */
+
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-position: center;
 }
